[gd_scene load_steps=5 format=3 uid="uid://bcfs7nljoccss"]

[ext_resource type="Script" path="res://scenes/game/bossfight/components/joke_typing.gd" id="1_gd0n1"]

[sub_resource type="Animation" id="Animation_cae7m"]
resource_name = "right_joke"
length = 0.8
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"right_joke_anim_played"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("joke_UI:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, 50), Vector2(2.08165e-12, -100), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vadex"]
resource_name = "wrong_joke"
length = 0.7
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.65),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"wrong_joke_anim_played"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("joke_UI:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-20, 2.08165e-12), Vector2(20, 2.08165e-12), Vector2(-20, 2.08165e-12), Vector2(20, 2.08165e-12), Vector2(-20, 2.08165e-12), Vector2(20, 2.08165e-12), Vector2(-20, 2.08165e-12), Vector2(20, 2.08165e-12), Vector2(-15, 2.08165e-12), Vector2(15, 2.08165e-12), Vector2(-10, 2.08165e-12), Vector2(10, 2.08165e-12), Vector2(-5, 2.08165e-12), Vector2(2.08165e-12, 2.08165e-12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0g10k"]
_data = {
"right_joke": SubResource("Animation_cae7m"),
"wrong_joke": SubResource("Animation_vadex")
}

[node name="JokeTyping" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gd0n1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0g10k")
}

[node name="joke_UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="joke_UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.607843, 1)

[node name="Joke_display" type="Label" parent="joke_UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -43.0
offset_right = 109.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "sei per seo?
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_input" type="LineEdit" parent="joke_UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -5.0
offset_right = 201.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
